--- a/1_SetUp/1.3_Build_Azure_VM/build_azure_vm.yml
+++ b/1_SetUp/1.3_Build_Azure_VM/build_azure_vm.yml
@@ -6,8 +6,8 @@
   hosts: localhost
   connection: local
   vars:
-    resource_group_name: myResourceGroup
-    location: eastus
+    resource_group_name: learnAnsibleRG
+    location: uksouth
     vnet_name: myVnet
     subnet_name: mySubnet
     public_ip_name: myPublicIP
@@ -16,34 +16,34 @@
     vm_name: myVM
     vm_size: Standard_DS1_v2
     vm_username: adminuser
-    key_data: <key_data> 
+    key_data: "PUBLIC_KEY_DATA"
   tasks:
   - name: Create resource group
-    azure_rm_resourcegroup:
+    azure.azcollection.azure_rm_resourcegroup:
       name: "{{ resource_group_name }}"
       location: "{{ location }}"
   - name: Create virtual network
-    azure_rm_virtualnetwork:
+    azure.azcollection.azure_rm_virtualnetwork:
       resource_group: "{{ resource_group_name }}"
       name: "{{ vnet_name }}"
       address_prefixes: "10.0.0.0/16"
   - name: Add subnet
-    azure_rm_subnet:
+    azure.azcollection.azure_rm_subnet:
       resource_group: "{{ resource_group_name }}"
       name: "{{ subnet_name }}"
       address_prefix: "10.0.1.0/24"
       virtual_network: "{{ vnet_name }}"
   - name: Create public IP address
-    azure_rm_publicipaddress:
+    azure.azcollection.azure_rm_publicipaddress:
       resource_group: "{{ resource_group_name }}"
       allocation_method: Static
       name: "{{ public_ip_name }}"
     register: output_ip_address
   - name: Public IP of VM
-    debug:
+    ansible.builtin.debug:
       msg: "The public IP is {{ output_ip_address.state.ip_address }}."
-  - name: Create Network Security Group that allows SSH
-    azure_rm_securitygroup:
+  - name: Create Network Security Group that allows SSH and HTTP
+    azure.azcollection.azure_rm_securitygroup:
       resource_group: "{{ resource_group_name }}"
       name: "{{ nsg_name }}"
       rules:
@@ -53,16 +53,25 @@
           access: Allow
           priority: 1001
           direction: Inbound
+        - name: HTTP
+          protocol: Tcp
+          destination_port_range: 80
+          access: Allow
+          priority: 1002
+          direction: Inbound
   - name: Create virtual network interface card
-    azure_rm_networkinterface:
+    azure.azcollection.azure_rm_networkinterface:
       resource_group: "{{ resource_group_name }}"
       name: "{{ nic_name }}"
       virtual_network: "{{ vnet_name }}"
       subnet: "{{ subnet_name }}"
-      public_ip_name: "{{ public_ip_name }}"
       security_group: "{{ nsg_name }}"
+      ip_configurations:
+      - name: ipconfig1
+        public_ip_address_name: "{{ public_ip_name }}"
+        primary: true
   - name: Create VM
-    azure_rm_virtualmachine:
+    azure.azcollection.azure_rm_virtualmachine:
       resource_group: "{{ resource_group_name }}"
       name: "{{ vm_name }}"
       vm_size: "{{ vm_size }}"
@@ -77,3 +86,6 @@
         publisher: Canonical
         sku: 22_04-lts
         version: latest
+  - name: Public IP of VM
+    ansible.builtin.debug:
+      msg: "The public IP is {{ output_ip_address.state.ip_address }}."
