--- a/1_SetUp/1.4_Remove_Azure_VM/delete_rg.yml
+++ b/1_SetUp/1.4_Remove_Azure_VM/delete_rg.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
   vars:
-    name: myResourceGroup
+    name: learnAnsibleRG
   tasks:
     - name: Deleting resource group - "{{ name }}"
       azure_rm_resourcegroup:
