--- a/2_Intro_to_Ansible/inventory.yml
+++ b/2_Intro_to_Ansible/inventory.yml
@@ -1,7 +1,9 @@
+---
+
 test_group:
   hosts:
     node1:
-      ansible_host: 10.0.0.11
+      ansible_host: <Insert IP Address>
   vars:
     ansible_ssh_private_key_file: ~/.ssh/id_rsa
     ansible_user: adminuser
