--- a/2_Intro_to_Ansible/myFirstPlaybook.yml
+++ b/2_Intro_to_Ansible/myFirstPlaybook.yml
@@ -2,7 +2,7 @@
 
 - name: My first playbook
   hosts: test_group
-  become: false
+  become: true
   gather_facts: true
   tasks:
     - name: Update apt
