--- a/1_Intro_to_Ansible_Part1/example_inventory.yml
+++ b/1_Intro_to_Ansible_Part1/example_inventory.yml
@@ -2,11 +2,13 @@
 
 test_group:
   hosts:
-    myVM-1:
-      ansible_host: <Insert IP Address>
-    myVM-2:
-      ansible_host: <Insert IP Address>
+    node1:
+      ansible_host: 10.0.210.10
   vars:
     ansible_ssh_private_key_file: ~/.ssh/id_rsa
     ansible_user: adminuser
     ansible_python_interpreter: /usr/bin/python3
+
+alternative_group:
+  hosts: 
+    node1:
