--- a/2_Intro_to_Ansible_part2/example_inventory.yml
+++ b/2_Intro_to_Ansible_part2/example_inventory.yml
@@ -3,10 +3,10 @@
 test_group:
   hosts:
     myVM-1:
-      ansible_host: <Insert IP Address>
+      ansible_host: 10.0.10.10 
     myVM-2:
-      ansible_host: <Insert IP Address>
+      ansible_host: 10.0.10.11
   vars:
-    ansible_ssh_private_key_file: ~/.ssh/id_rsa
+    ansible_ssh_private_key_file: ~/.ssh/id_rsa 
     ansible_user: adminuser
     ansible_python_interpreter: /usr/bin/python3
